ci/cd pipeline integrated

--- a/backend/Dockerfile.backend
+++ b/backend/Dockerfile.backend
@@ -1,20 +1,22 @@
-# Use the official Node.js image as the base image
-FROM node:16
+# Use Node 20 Alpine image
+FROM node:20-alpine
 
-# Set the working directory inside the container
+# Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json to install dependencies
+# Copy dependency files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install
+# Install required build tools for bcrypt
+RUN apk add --no-cache python3 make g++ \
+    && npm install \
+    && apk del python3 make g++
 
-# Copy the rest of the application code
+# Copy application code
 COPY . .
 
-# Expose the port your API will run on (e.g., 5000)
+# Expose your backend port (adjust if needed)
 EXPOSE 5000
 
-# Start the backend application (assuming you use "npm start" to run the backend)
+# Start the backend app
 CMD ["npm", "start"]
