Backend and frontend communication

--- a/backend/Dockerfile.backend
+++ b/backend/Dockerfile.backend
@@ -1,22 +1,18 @@
-# Use Node 20 Alpine image
 FROM node:20-alpine
 
-# Set working directory
 WORKDIR /app
 
-# Copy dependency files
 COPY package*.json ./
 
-# Install required build tools for bcrypt
 RUN apk add --no-cache python3 make g++ \
     && npm install \
     && apk del python3 make g++
 
-# Copy application code
 COPY . .
 
-# Expose your backend port (adjust if needed)
+# ✅ Add this line
+COPY .env .env
+
 EXPOSE 5000
 
-# Start the backend app
 CMD ["npm", "start"]
